// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should match snapshot when canClick is false 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  color: rgba(0,0,0,0.9);
  background-color: #ffffff;
  cursor: default;
  box-shadow: 3px 3px 0px rgba(0,0,0,0.9);
  border: 3px solid rgba(0,0,0,0.9);
  line-height: 14px;
  height: 30px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 100%;
  font-size: 14px;
  padding: 5px 10px;
}

.c0:hover {
  background-color: rgba(0,0,0,0.05);
}

<div
  className="c0"
  onClick={[Function]}
/>
`;

exports[`Button should match snapshot when canClick is true 1`] = `
.c0 {
  display: inline-block;
  box-sizing: border-box;
  color: rgba(0,0,0,0.9);
  background-color: #ffffff;
  cursor: pointer;
  box-shadow: 3px 3px 0px rgba(0,0,0,0.9);
  border: 3px solid rgba(0,0,0,0.9);
  line-height: 14px;
  height: 30px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  max-width: 100%;
  font-size: 14px;
  padding: 5px 10px;
}

.c0:hover {
  background-color: rgba(0,0,0,0.05);
}

.c0:active {
  background-color: rgba(0,0,0,0.9);
  box-shadow: 0px 0px 0px rgba(0,0,0,0.9);
  border: 3px solid transparent;
  color: #ffffff;
}

<div
  className="c0"
  onClick={[Function]}
/>
`;
